Fix z-index

--- a/source/wakaba.css
+++ b/source/wakaba.css
@@ -117,6 +117,7 @@ body {
 body > nav {
     min-height: 36px;
     padding: 8px 16px 8px 0;
+    z-index: 10;
     background-color: #99cccc;
     box-shadow: inset 0 -2px 4px #ccffee;
     text-align: right;
@@ -138,7 +139,6 @@ body > nav > #menu_button {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
     border-radius: 15%;
     background-color: #f0fcfc;
     box-shadow: 0 0 4px #cfe;
